--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ python:
     - 2.7
     - 3.6
     - 3.7
+
 install:
-    python setup.py install
+    - pip install -r requirements-test.txt
+    - python setup.py install
 
 script:
-    pip install -r requirements-test.txt
-    python tests/tests.py
+    - python tests/tests.py
