Better cleaning and req files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,5 @@
-recursive-include schema *
+recursive-include src
+recursive-exclude * __pycache__
+recursive-exclude * *.pyc
+recursive-exclude * *.pyo
+recursive-exclude * *.orig
