--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ jobs:
   include:
     - stage: deploy sandpit
       python: 3.6
-      install: pip install invoke
+      install: pip install invoke twine
       script: skip
       deploy:
         provider: script
