--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,12 @@ script: inv unit && coveralls
 
 
 deploy:
-  - provider: script
-    skip_cleanup: true
-    skip_existing: true
-    script: inv upload
-    on:
-        tags: true
-        branch: master
+  provider: pypi
+  user: $TWINE_USERNAME
+  password: $TWINE_PASSWORD
+  distributions: "sdist bdist_wheel"
+  skip_existing: true
+  skip_cleanup: true
+  on:
+    tags: true
+    branch: master
