--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,8 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install invoke
-        pip install flake8
+        pip install invoke flake8 wheel
     - name: Clean and build
       run: |
         inv clean build package install
