--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -47,7 +47,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
 
-    if: contains(github.ref, "release")
+    if: github.event_name == 'release' && github.event.action == 'created'
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
