Periodically run on a schedule

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,6 +10,8 @@ on:
     branches: [ master ]
   release:
     types: [created]
+  schedule:
+    - cron: "20 4 * * 0"
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
